force-app/main/default/objects/ampi__Risk__c/ampi__Risk__c.object-meta.xml
<CustomObject>
    <description>Track conversations, decisions, and actions taken by an organization aimed at mitigating identified risks and managing risk events</description>
    <label>Risk</label>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>