force-app/main/default/objects/ampi__Risk__c/fields/ampi__Activity__c.field-meta.xml
<CustomField>
    <fullName>ampi__Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Activity the Risk is related to. This can only be related to Activities of the same Project as Risk.</description>
    <inlineHelpText>Select the Activity related to this Risk.</inlineHelpText>
    <label>Activity</label>
    <referenceTo>ampi__Activity__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>