force-app/main/default/objects/ampi__Risk__c/fields/ampi__Category__c.field-meta.xml
<CustomField>
    <fullName>ampi__Category__c</fullName>
    <description>Identify the category (e.g. political, financial, etc.) to which a single risk belongs. This picklist is unrestricted to allow organizations to categorize risks as makes sense for their processes.</description>
    <inlineHelpText>Identify the category to which a single risk belongs</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Political</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Child Safeguarding</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>