force-app/main/default/objects/ampi__Risk__c/fields/ampi__Control_Over_Risk__c.field-meta.xml
<CustomField>
    <fullName>ampi__Control_Over_Risk__c</fullName>
    <description>Assess how much control a team has over this potential risk occurring (e.g. low, medium, high)</description>
    <inlineHelpText>Evaluate our ability to be able to influence the impact and priority of the risk</inlineHelpText>
    <label>Control Over Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>