force-app/main/default/objects/ampi__Risk__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>Text field to describe Risk in detail</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>