force-app/main/default/objects/ampi__Risk__c/fields/ampi__Identification_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Identification_Date__c</fullName>
    <description>Track when a risk was identified</description>
    <inlineHelpText>Indicate the date this risk was initially identified</inlineHelpText>
    <label>Identification Date</label>
    <type>Date</type>
</CustomField>