force-app/main/default/objects/ampi__Risk__c/fields/ampi__Mitigation_Strategy_Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Mitigation_Strategy_Description__c</fullName>
    <description>Describe the selected migration strategy, such as timeline and action items</description>
    <inlineHelpText>Provide a detailed description of the mitigation strategy for this risk and information about any intended action(s)</inlineHelpText>
    <label>Mitigation Strategy Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>