force-app/main/default/objects/ampi__Risk__c/fields/ampi__Mitigation_Strategy_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Mitigation_Strategy_Type__c</fullName>
    <description>Define the type of mitigation strategy</description>
    <inlineHelpText>For each risk, a decision is taken to determine whether a mitigation strategy is needed, and if so, what type of strategy to undertake. For this, evaluate the combined severity of the risk&apos;s probability, proximity, potential impact and probability.</inlineHelpText>
    <label>Mitigation Strategy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avoid</fullName>
            </value>
            <value>
                <fullName>Limit</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>