force-app/main/default/objects/ampi__Risk__c/fields/ampi__Notes__c.field-meta.xml
<CustomField>
    <fullName>ampi__Notes__c</fullName>
    <description>Include any additional notes that are pertinent to the risk and strategy</description>
    <inlineHelpText>Provide any additional information here that may be relevant to evaluating, monitoring, and assessing this risk</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>