force-app/main/default/objects/ampi__Risk__c/fields/ampi__Potential_Impact__c.field-meta.xml
<CustomField>
    <fullName>ampi__Potential_Impact__c</fullName>
    <description>Assess the severity/potential harm of the risk (e.g. high, med, low) if it occurs - can be compared with Actual Impact</description>
    <inlineHelpText>Evaluate the consequences of the risk, if it does occur</inlineHelpText>
    <label>Potential Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cause Early Termination or Major Problems</fullName>
                <label>Severe</label>
            </value>
            <value>
                <fullName>Significant Impact</fullName>
                <label>Major</label>
            </value>
            <value>
                <fullName>Moderate Impact</fullName>
                <label>Moderate</label>
            </value>
            <value>
                <fullName>Minor Impact</fullName>
                <label>Minor</label>
            </value>
            <value>
                <fullName>Almost No Impact</fullName>
                <label>Almost None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>