force-app/main/default/objects/ampi__Risk__c/fields/ampi__Priority__c.field-meta.xml
<CustomField>
    <fullName>ampi__Priority__c</fullName>
    <description>Assign a priority level for each risk	to contextualize the necessary planning</description>
    <inlineHelpText>Evaluate the importance of this risk and the attention that should be given to it</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>