force-app/main/default/objects/ampi__Risk__c/fields/ampi__Probability__c.field-meta.xml
<CustomField>
    <fullName>ampi__Probability__c</fullName>
    <description>Assess the likelihood of the risk occurring (e.g. high, med, low)</description>
    <inlineHelpText>Evaluate the likelihood this risk will occur</inlineHelpText>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Likely</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>May Occur</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Very Unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>