force-app/main/default/objects/ampi__Risk__c/fields/ampi__Proximity__c.field-meta.xml
<CustomField>
    <fullName>ampi__Proximity__c</fullName>
    <description>Track how close the project is, in terms of time, to a risk occurring</description>
    <inlineHelpText>Evaluate how close we are, in terms of time, to the risk occurring</inlineHelpText>
    <label>Proximity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>