force-app/main/default/objects/ampi__Risk__c/fields/ampi__Risk_Register__c.field-meta.xml
<CustomField>
    <fullName>ampi__Risk_Register__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Risk Register which contains this Risk.</description>
    <label>Risk Register</label>
    <referenceTo>ampi__Risk_Register__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>