force-app/main/default/objects/ampi__Risk__c/fields/ampi__Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Risk_Type__c</fullName>
    <description>Define the risk type to report on specific types of mitigation strategies</description>
    <inlineHelpText>Evaluate the type of risk, in terms of the length of its scope</inlineHelpText>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Short-term</fullName>
            </value>
            <value>
                <fullName>Medium-term</fullName>
            </value>
            <value>
                <fullName>Long-term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>