force-app/main/default/objects/ampi__Risk__c/fields/ampi__Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__Status__c</fullName>
    <description>Identify the status of a mitigation strategy</description>
    <inlineHelpText>Indicate the current stage of the risk</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>