force-app/main/default/objects/ampi__Risk__c/fields/ampi__xx_Acceptable_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Acceptable_Risk_Level__c</fullName>
    <description>Picklist field used to specify the accepted level for a Risk</description>
    <label>Acceptable Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Medium High Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>Medium Low Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>