force-app/main/default/objects/ampi__Risk__c/fields/ampi__xx_Control_Over_Risk_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Control_Over_Risk_Icon__c</fullName>
    <description>Formula field that displays a color icon based on the picklist value selected in ampi__Control_Over_Risk__c.</description>
    <formula>CASE(ampi__Control_Over_Risk__c,
&quot;Low&quot;,IMAGE(LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) &amp; &quot;resource/ampi__Risk/R5red.png&quot;,&quot;Low&quot;,20,20),
&quot;Medium&quot;,IMAGE(LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) &amp; &quot;resource/ampi__Risk/R3yellow.png&quot;,&quot;Medium&quot;,20,20),
&quot;High&quot;,IMAGE(LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) &amp; &quot;resource/ampi__Risk/R1green.png&quot;,&quot;High&quot;,20,20),&quot;&quot;)
&amp; &quot; &quot; &amp; text(ampi__Control_Over_Risk__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Control Over Risk</label>
    <type>Text</type>
</CustomField>