force-app/main/default/objects/ampi__Risk__c/fields/ampi__xx_Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Impact_Score__c</fullName>
    <description>Formula field that calculates a numeric score based on the picklist value selected in ampi__Potential_Impact__c.</description>
    <formula>if(ispickval($CustomMetadata.ampi__Risk_Setting__mdt.ampi__Risk_Default_Scale_5x5.ampi__xx_Risk_Mode__c,&quot;3&quot;),
case(ampi__Potential_Impact__c,&quot;Low&quot;,1,&quot;Medium&quot;,2,&quot;High&quot;,3,null),

if(ispickval($CustomMetadata.ampi__Risk_Setting__mdt.ampi__Risk_Default_Scale_5x5.ampi__xx_Risk_Mode__c,&quot;4&quot;),
case(ampi__Potential_Impact__c,&quot;Low&quot;,1,&quot;Medium&quot;,2,&quot;High&quot;,3,&quot;Very High&quot;,4,null),

if(ispickval($CustomMetadata.ampi__Risk_Setting__mdt.ampi__Risk_Default_Scale_5x5.ampi__xx_Risk_Mode__c,&quot;5&quot;),
case(ampi__Potential_Impact__c,&quot;Very Low&quot;,1,&quot;Low&quot;,2,&quot;Medium&quot;,3,&quot;High&quot;,4,&quot;Very High&quot;,5,null),null)))</formula>
    <label>Impact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>