force-app/main/default/objects/ampi__Risk__c/fields/ampi__xx_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Overall_Score__c</fullName>
    <description>Formula field that calculates a numeric score based on the values determined for ampi__xx_Probability_Score__c and ampi__xx_Impact_Score__c.</description>
    <formula>ampi__xx_Probability_Score__c * ampi__xx_Impact_Score__c</formula>
    <inlineHelpText>Multiplies Probability x Potential Impact</inlineHelpText>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>