force-app/main/default/objects/ampi__Risk__c/fields/ampi__xx_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Level__c</fullName>
    <description>This field compares the value of the ampi__xx_Overall_Score__c field to the thresholds defined in the ampi__Risk_Setting__mdt custom metadata type. It is auto-populated by the ampi__Populate_Risk_Level Process Builder based on the threshold the value falls within.</description>
    <inlineHelpText>Summary level of Risk based on the Probability and Impact.</inlineHelpText>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
                <color>#FF0000</color>
                <label>High Risk</label>
            </value>
            <value>
                <fullName>Medium High Risk</fullName>
                <color>#FF9900</color>
                <label>Medium High Risk</label>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
                <color>#F3D904</color>
                <label>Medium Risk</label>
            </value>
            <value>
                <fullName>Medium Low Risk</fullName>
                <color>#78C953</color>
                <label>Medium Low Risk</label>
            </value>
            <value>
                <fullName>Low Risk</fullName>
                <color>#419249</color>
                <label>Low Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>