force-app/main/default/objects/ampi__Risk__c/fields/ampi__xx_Risk_Level_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Level_Icon__c</fullName>
    <description>Formula field that displays a color icon based on the picklist value selected in ampi__xx_Risk_Level__c.</description>
    <formula>CASE(ampi__xx_Risk_Level__c,
&quot;Low Risk&quot;,IMAGE(LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) &amp; &quot;resource/ampi__Risk/R1green.png&quot;,&quot;Low&quot;,20,20),
&quot;Medium Low Risk&quot;,IMAGE(LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) &amp; &quot;resource/ampi__Risk/R2green.png&quot;,&quot;Medium Low&quot;,20,20),
&quot;Medium Risk&quot;,IMAGE(LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) &amp; &quot;resource/ampi__Risk/R3yellow.png&quot;,&quot;Medium&quot;,20,20),
&quot;Medium High Risk&quot;,IMAGE(LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) &amp; &quot;resource/ampi__Risk/R4orange.png&quot;,&quot;Medium High&quot;,20,20),
&quot;High Risk&quot;,IMAGE(LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) &amp; &quot;resource/ampi__Risk/R5red.png&quot;,&quot;High&quot;,20,20),&quot;&quot;)&amp; &quot; &quot; &amp; text(ampi__xx_Risk_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>