force-app/main/default/objects/ampi__Risk__c/fields/Block_Record_Creation__c.field-meta.xml
<CustomField>
    <fullName>Block_Record_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Record Creation</label>
    <type>Checkbox</type>
</CustomField>