force-app/main/default/objects/ampi__Risk__c/fields/Catalogue_Type__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Type__c</fullName>
    <label>Catalogue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Risks</fullName>
            </value>
            <value>
                <fullName>Safety and Security Risks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>