force-app/main/default/objects/ampi__Risk__c/fields/Copied_From__c.field-meta.xml
<CustomField>
    <fullName>Copied_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copied From</label>
    <referenceTo>ampi__Risk__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>