force-app/main/default/objects/ampi__Risk__c/fields/Impact_Value__c.field-meta.xml
<CustomField>
    <fullName>Impact_Value__c</fullName>
    <description>Assigns a numerical value 1-5 based on the selection in the &quot;Potential Impact&quot; field.</description>
    <formula>CASE(ampi__Potential_Impact__c,
&quot;Almost None&quot;,5,
&quot;Minor&quot;,4,
&quot;Moderate&quot;,3,
&quot;Major&quot;,2,
&quot;Severe&quot;,1,
&quot;Casi sin Impacto&quot;,5,
&quot;Impacto Minimo&quot;,4,
&quot;Moderado&quot;,3,
&quot;Impacto Significativo&quot;,2,
&quot;Ocasiona Resolución Anticipada o Problemas Graves&quot;,1,
0)</formula>
    <label>Impact Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>