force-app/main/default/objects/ampi__Risk__c/fields/IsAddedByBulk__c.field-meta.xml
<CustomField>
    <fullName>IsAddedByBulk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAddedByBulk</label>
    <type>Checkbox</type>
</CustomField>