force-app/main/default/objects/ampi__Risk__c/fields/Nature_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Risk__c</fullName>
    <label>Nature of Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>