force-app/main/default/objects/ampi__Risk__c/fields/Programme_Location__c.field-meta.xml
<CustomField>
    <fullName>Programme_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. You can only select a Programme.</errorMessage>
        <filterItems>
            <field>ampi__Geographical_Area__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Programme</value>
        </filterItems>
        <infoMessage>Please select a Programme record.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>