force-app/main/default/objects/ampi__Risk__c/fields/Risk_Description_Language_2__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description_Language_2__c</fullName>
    <label>Risk Description Language 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>