force-app/main/default/objects/ampi__Risk__c/fields/Risk_Description_Translated__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description_Translated__c</fullName>
    <label>Risk Description Translated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>