force-app/main/default/objects/ampi__Risk__c/fields/Risk_Name_Language_1__c.field-meta.xml
<CustomField>
    <fullName>Risk_Name_Language_1__c</fullName>
    <label>Risk Name Language 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>