force-app/main/default/objects/ampi__Risk__c/fields/Risk_Name_Translated__c.field-meta.xml
<CustomField>
    <fullName>Risk_Name_Translated__c</fullName>
    <formula>IF(ISBLANK(TEXT($User.LanguageLocaleKey)),Name, CASE(LEFT(TEXT($User.LanguageLocaleKey), 2), &apos;es&apos;, BLANKVALUE(Risk_Name_Language_1__c, Name), &apos;fr&apos;, BLANKVALUE(Risk_Name_Language_2__c, Name), &apos;ru&apos;, BLANKVALUE(Risk_Name_Language_3__c, Name),Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Name Translated</label>
    <type>Text</type>
</CustomField>