force-app/main/default/objects/ampi__Risk__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <formula>IF(Risk_Value__c = 0, null,
IF(Risk_Value__c  &lt;= 4, &quot;Assumption&quot;,
IF(Risk_Value__c &lt;= 12, &quot;Acceptable risk&quot;,
IF(Risk_Value__c &lt;= 19, &quot;Acceptable or critical&quot;,
IF(Risk_Value__c &lt;= 25, &quot;Critical risk&quot;,
null)))))</formula>
    <label>Risk Type</label>
    <type>Text</type>
</CustomField>