force-app/main/default/objects/ampi__Risk__c/fields/Risk_Value__c.field-meta.xml
<CustomField>
    <fullName>Risk_Value__c</fullName>
    <formula>Impact_Value__c *  Probability_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>