force-app/main/default/objects/ampi__Risk__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>CASE(Copied_From__r.RecordType.Name,
&quot;Catalogue Risk&quot;, HYPERLINK(&quot;/&quot; &amp; Id, &quot;Catalogue Risk&quot;),
&quot;Programme Location Risk&quot;, HYPERLINK(&quot;/&quot; &amp; Id, Copied_From__r.Programme_Location__r.Name &amp; &quot; Risks&quot;),
&quot;&quot;)</formula>
    <label>Source</label>
    <type>Text</type>
</CustomField>