force-app/main/default/objects/ampi__Risk__c/fields/unique_field__c.field-meta.xml
<CustomField>
    <fullName>unique_field__c</fullName>
    <externalId>true</externalId>
    <label>unique field</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>