force-app/main/default/objects/ampi__Risk__c/recordTypes/Catalogue_Risk.recordType-meta.xml
<RecordType>
    <fullName>Catalogue_Risk</fullName>
    <active>true</active>
    <label>Catalogue Risk</label>
</RecordType>