force-app/main/default/objects/ampi__Risk__c/recordTypes/Programme_Location_Risk.recordType-meta.xml
<RecordType>
    <fullName>Programme_Location_Risk</fullName>
    <active>true</active>
    <label>Programme Location Risk</label>
</RecordType>