force-app/main/default/objects/ampi__Risk__c/recordTypes/Project_Risk.recordType-meta.xml
<RecordType>
    <fullName>Project_Risk</fullName>
    <active>true</active>
    <label>Project Risk</label>
</RecordType>