force-app/main/default/objects/ampi__Risk__c/validationRules/ampi__Selected_Activity_Outside_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>ampi__Selected_Activity_Outside_Project</fullName>
    <active>true</active>
    <description>Only those Activities whose parent Implementation Plan look up to same Project that parent Risk Register looks up to can be selected.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(ampi__Activity__c)), ampi__Risk_Register__r.ampi__Project__c  &lt;&gt;  ampi__Activity__r.ampi__Implementation_Plan__r.ampi__Project__c)</errorConditionFormula>
    <errorDisplayField>ampi__Activity__c</errorDisplayField>
    <errorMessage>Incorrect Activity selected: Only Activities in the same Project as this Risk can be selected.</errorMessage>
</ValidationRule>