force-app/main/default/objects/ampi__Risk__c/validationRules/Catalogue_Values_Locked_on_Project_Risk.validationRule-meta.xml
<ValidationRule>
    <fullName>Catalogue_Values_Locked_on_Project_Risk</fullName>
    <active>true</active>
    <description>Prevents users from updating the Name, Nature of Risk, and Category fields on a Project Risk, if that risk has been copied from the Catalogue.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Copied_From__c)),
OR(
ISCHANGED( ampi__Category__c ) &amp;&amp; TEXT(ampi__Category__c) &lt;&gt; TEXT(Copied_From__r.ampi__Category__c),
ISCHANGED( Name )&amp;&amp; Name &lt;&gt; Copied_From__r.Name,
ISCHANGED( Nature_of_Risk__c ) &amp;&amp; TEXT(Nature_of_Risk__c) &lt;&gt; TEXT(Copied_From__r.Nature_of_Risk__c)
))</errorConditionFormula>
    <errorMessage>This Project Risk was copied from the Catalogue, the fields Risk Name, Nature of Risk, and Category are required to match the Catalogue Risk and cannot be updated.</errorMessage>
</ValidationRule>